# heron-sound

./: Cargo.toml  LICENSE-MIT  README.md  justfile
src/: clock.rs  lib.rs  phase.rs  trigger.rs
src/env/: adsr.rs  da.rs  exp_adsr.rs  mod.rs  time_stage.rs
src/filter/: mod.rs
src/filter/svf/: core.rs  mod.rs  output.rs
src/follow/: mod.rs
src/lfo/: basic.rs  mod.rs
src/modulate/: accumulate.rs  mod.rs  spec.rs
src/osc/: core.rs  mod.rs
src/pitch/: cache.rs  glide.rs  mod.rs  octave.rs
src/util/: accessor_macros.rs  bitmask.rs  bitmask_impls.rs  bounds_check_macros.rs  inverse.rs  midi_note_pitches.rs  mod.rs  time.rs
src/wave/: compute.rs  mod.rs  wave_set.rs  wave_shape.rs
